# deep-peep-snooker

./: .gitignore  .~lock.bottom_cushion_results.xlsx#  .~lock.top_cushion_results.xlsx#  01_test_external_cushions_detection.py  02_test_internal_bottom_cushion_detection.ipynb  02_test_internal_bottom_cushion_detection.py  03_test_internal_top_cushion_detection.ipynb  03_test_internal_top_cushion_detection.py  04_test_internal_side_cushions_detection.py  inference.ipynb  main.py  pyproject.toml  test copy 2.ipynb  test copy.ipynb  test_bottom_cushion.ipynb  test_top_cushion.ipynb
notebooks/: 01_side_interal_cushions_detection.ipynb  02_top_interal_cushion_detection copy.ipynb  02_top_interal_cushion_detection.ipynb  03_baulk_line_detection.ipynb  04_bottom_internal_cushion_detection copy.ipynb  04_bottom_internal_cushion_detection.ipynb  04_test_internal_side_cushions_detection.ipynb  inference copy.ipynb  inference.ipynb  test copy.ipynb
src/: config.py
src/utils/: annotations.py  common.py  const.py  func.py  intersection.py  intersections.py  lines.py  metrics.py  playfield.py  playfield_finder.py  plotting.py  points.py  schemas.py
utils/: image_array.py
