[project]
name = "deep-peep-snooker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
    "pandas>=2.3.3",
    "openpyxl>=3.1.2",
    "odfpy>=1.4.1",
]
